# hello-sdl3

./: CMakeLists.txt  LICENSE  README.md  main.cpp
