cmake_minimum_required(VERSION 3.16)

project(hello-sdl3 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-shared)

add_executable(${CMAKE_PROJECT_NAME} main.cpp  )

target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE SDL3::SDL3-shared)

include(GNUInstallDirs)
install(
  TARGETS ${CMAKE_PROJECT_NAME}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
